deploy/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: apiecommerce
   namespace: 
   labels:
     app: apiecommerce
spec:
  replicas: 1
  selector:
     matchLabels:
       app: apiecommerce
  template: 
    metadata:
      labels:
        app: apiecommerce
    spec:
      containers:
      - name: apiecommerce
        image: 
        ports:
        - containerPort: 80
        - containerPort: 5432
