deploy/04-ingressTLS.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: campo_gitlab_ci-ingressTLS
  namespace:   
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - URL
    secretName: campo_gitlab_ci-ingressTLS-secret
  rules:
  - host: URL
    http:
      paths:
      - backend:
          serviceName: campo_gitlab_ci-svc
          servicePort: 80
